# universal_manipulation_interface

./: .env.tamplate  .gitignore  .gitmodules  Dockerfile  README.md  bs.sh  pyproject.toml  run_docker_pipline.sh  run_vis.sh
pipline_scripts/: .zarr_to_lerobot.py.swo  .zarr_to_lerobot.py.swp  07_generate_el_dataset.py  cv_cam.py  from raw.py  real_cam.py  rotation_test.py  test.py  test_rotation.py  visualize.py  zarr_to_lerobot.py
src/lbot/: umi_zarr_format.py  util.py
src/universal_manipulation_interface/: run_slam_pipeline.py
src/universal_manipulation_interface/scripts_slam_pipeline/: 02_create_map.py  03_batch_slam.py  05_run_calibrations.py  06_generate_dataset_plan.py
src/universal_manipulation_interface/slam/: gopro12_black_maxlens_fisheye_setting_v1.yaml
src/universal_manipulation_interface/umi/common/: cv_util.py
